@@ -50,7 +50,11 @@ CHANGES
       should reduce the probability of "Attribute x was 
       not replaced during compile" warnings. (this generally
       applies to SQLA hackers, like Elixir devs).
-      
+
+- sql
+    - func.count() with no arguments renders as COUNT(*),
+      equivalent to func.count(text('*')). 
+ 
 - ext
     - Class-bound attributes sent as arguments to 
       relation()'s remote_side and foreign_keys parameters 
